# spy-tank

./: CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  README.md  SpyTank.cpp  VideoReceiver.cpp  VideoReceiver.h  main.cpp
docs/: BUILD_LINUX.md
scripts/: spy_tank.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  SpyTank.h  VideoReceiver.cpp  VideoReceiver.h
src/desktop/: CMakeLists.txt  MainWindow.h
src/mobile/: CMakeLists.txt  Main.qml  QmlVideoProducer.h  main.cpp
src/mobile/android/: AndroidManifest.xml
tests/: CMakeLists.txt
tests/TestSpyTank/: TestSpyTank.cpp  TestSpyTank.h
tests/TestVideoReceiver/: TestVideoReceiver.cpp  TestVideoReceiver.h
